--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,31 @@
-name: Deploy Flask App
+name: Déploiement Flask automatique
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: 📥 Cloner le dépôt
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: 🐍 Installer Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      - name: 📦 Installer les dépendances
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run tests (optionnel)
-      run: |
-        echo "Pas de tests pour l’instant"
+      - name: ✅ Lancer un test (optionnel)
+        run: |
+          echo "Lancement du test"
+          python -c "print('CI-CD OK')"
 
-    - name: Deploy to Render (ou autre)
-      run: echo "Déploiement manuel via Render.com"
+     
+      
